Sat Jan 01 18:45:26 2000  George Lebl <jirka@5z.com>

	* gnome-config.c,gnome-help.c,gnome-mime-info.c: Use LC_MESSAGES
	  instead of LC_ALL to get the language to use for translating
	  messages.  LC_ALL is used as well inside gnome-i18n anyway
	  and messages need to use LC_MESSAGES if it's set

	* gnome-help.c: s/g_fee/g_free/ in the inline docs for two functions

Mon Dec 13 23:53:20 1999  George Lebl <jirka@5z.com>

	* gnome-mime-info.c: current_lang is a list of languages.  Also
	  we store the previous key and it's language level when reading.
	  (remove_this_key) removed this function as it is replaced by
	  using g_hash_table_lookup_extended where we don't need to
	  remove/readd, but just readd with the old key
	  (context_add_key) take an extra 'lang' argument which is the
	  language of the current key/value or NULL.  If the current 'lang'
	  is higher then the previous key's lang level we replace the
	  previous key with this key, otherwise we just add the key/value
	  (load_mime_type_info_from) keep track of lang just like we do
	  of 'key'
	  (gnome_mime_flag) take the 'key' as an argument and do the right
	  thing
	  (gnome_mime_copiousoutput,gnome_mime_needsterminal) call the
	  gnome_mime_flag with the 'key'

	* gnome-mime-info.h: gnome_mime_nametemplate removed from the
	  header as it was not actually implemented anywhere

Sun Dec 05 01:32:35 1999  George Lebl <jirka@5z.com>

	* gnome-dentry.c: fix the quoting, now we don't quote the exec vector
	  from the dentry as this is the expected behaviour, but we do quote
	  the arguments passed to gnome_desktop_entry_launch_with_args so
	  that we work with filenames with spaces.  This will completely
	  fix #4010.

Fri Dec 03 21:23:56 1999  George Lebl <jirka@5z.com>

	* gnome-dentry.c: fix a segfault in join_with_quotes, fixes #4010

1999-11-11  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome-config.c (gnome_config_make_vector): correctly
	handle the "a \b c" case (escaped character between 2