@@ -1,3 +1,8 @@
+Mon Jan 17 13:59:59 2000  George Lebl <jirka@5z.com>
+
+	* gnome-dentry.c: if we find gnome-terminal use that as
+	  the default for running in the terminal instead of xterm
+
 Sat Jan 01 18:45:26 2000  George Lebl <jirka@5z.com>
 
 	* gnome-config.c,gnome-help.c,gnome-mime-info.c: Use LC_MESSAGES
